plugins {
    id 'net.fabricmc.fabric-loom' version '1.15-SNAPSHOT'
    id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "0.8.4"
}

version = mod_version + "+refabricated"
group = mod_group_id

base {
    archivesName = "FarmersDelight"
}

fabricApi {
    configureDataGeneration {
        outputDirectory = file("src/generated/resources")
        strictValidation = false
        createSourceSet = true
        modId = project.mod_id
    }
}

loom {
    accessWidenerPath = file("src/main/resources/farmersdelight.accesswidener")
}

repositories {

    flatDir {
        dirs 'mods'
    }

    maven { url "https://maven.parchmentmc.org" }

    maven {
        url = "https://www.cursemaven.com"
        allowInsecureProtocol = true
    }

    maven {
        url "https://maven.firstdarkdev.xyz/snapshots"
    }

    maven {
        name = 'Ladysnake Mods'
        url = 'https://maven.ladysnake.org/releases'
    }

    maven {
        url = "https://api.modrinth.com/maven"
    }

    maven {
        // CraftTweaker, JEI
        name = "BlameJared"
        url = "https://maven.blamejared.com/"
    }
    maven { url "https://maven.ryanliptak.com/" } // AppleSkin
    maven { url = "https://maven.parchmentmc.org" } // Parchment
    maven { url = "https://maven.fabricmc.net/" } // FAPI, Loader
    exclusiveContent {
        forRepository {
            maven {
                url = "https://jitpack.io"
            }
        }
        filter {
            includeGroup "com.github.Chocohead"
        }
    }
    maven { url = "https://maven.architectury.dev/" } // REI and deps
    maven { url = "https://maven.shedaniel.me/" } // REI and deps
    maven { url = "https://maven.terraformersmc.com/" } // Mod Menu, EMI
    mavenCentral() // Mixin Extras
     exclusiveContent {
        forRepository {
            maven {
                name = "cassian's maven"
                url = "https://maven.cassian.cc"
            }
        }
        filter {
            includeGroup( "cc.cassian.rrv")
        }
    }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"

    implementation "net.fabricmc:fabric-loader:${fabric_loader_version}"

    implementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"

    include(implementation("com.github.Chocohead:Fabric-ASM:${fabric_asm_version}")) {
        exclude (group: "net.fabricmc.fabric-api")
    }

    //config stuff. optional
    compileOnly("me.shedaniel.cloth:cloth-config-neoforge:${cloth_version}")
    compileOnly("curse.maven:yacl-667299:7353769")
    compileOnly("maven.modrinth:modmenu:${project.modmenu_version}")
//    modLocalRuntime("com.terraformersmc:modmenu:${project.modmenu_version}")

//    modCompileOnly("com.blamejared.crafttweaker:CraftTweaker-fabric-${minecraft_version}:${crafttweaker_version}")
    // Uncomment the below to test CraftTweaker.
    // modLocalRuntime("com.blamejared.crafttweaker:CraftTweaker-fabric-${minecraft_version}:${crafttweaker_version}")

    compileOnly("mezz.jei:jei-26.1.2-common-api:${jei_version}")
    compileOnly("mezz.jei:jei-26.1.2-fabric-api:${jei_version}") {
        transitive = false
    }
    // Uncomment the below to test JEI.
//     localRuntime("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")

    compileOnly("me.shedaniel.cloth:basic-math:0.6.1")
    compileOnly("dev.architectury:architectury-neoforge:18.0.3")
    compileOnly("me.shedaniel:RoughlyEnoughItems-api-neoforge:${rei_version}") {
        exclude(group: "dev.architectury")
    }
    compileOnly("me.shedaniel:RoughlyEnoughItems-default-plugin-neoforge:${rei_version}") {
        exclude(group: "dev.architectury")
    }
    // Uncomment the below to test REI.
//      localRuntime("me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}") {
//          exclude(group: "dev.architectury")
//      }

//    compileOnly("dev.emi:emi-fabric:${emi_version}:api") {
//        exclude(group: "net.fabricmc.fabric-api")
//    }
    // Uncomment the below to test EMI.
//    localRuntime("dev.emi:emi-fabric:${emi_version}") {
//        exclude(group: "net.fabricmc.fabric-api")
//    }

    compileOnly("cc.cassian.rrv:reliable-recipe-viewer-fabric:${rrv_version}") {
        exclude(group: "net.fabricmc.fabric-api")
        exclude(group: "eu.pb4")
    }
    // Uncomment the below to test RRV.
     localRuntime("cc.cassian.rrv:reliable-recipe-viewer-fabric:${rrv_version}") {
        exclude(group: "net.fabricmc.fabric-api")
        exclude(group: "eu.pb4")
     }
}

var changelogFile = rootProject.file("changelog.md")
var changelogText = changelogFile.exists() ? changelogFile.text : ""

publishMods {
    file = jar.archiveFile
    changelog = changelogText
    type = STABLE
    displayName = "Farmer's Delight Refabricated ${mod_version.split("-")[1]} - ${minecraft_version}"
    version = mod_version

    modLoaders.add("fabric")

    curseforge {
        projectId = curseforge_project_id

        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")

        minecraftVersions.addAll(minecraft_supported_versions.split(","))
        javaVersions.add(JavaVersion.VERSION_25)

        clientRequired = true
        serverRequired = true

        requires("fabric-api")
//        optional("crafttweaker")
        optional("jei")
//        optional("roughly-enough-items")
//        optional("emi")
        optional("rrv")
    }

    modrinth {
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        projectId = modrinth_project_id

        minecraftVersions.addAll(minecraft_supported_versions.split(","))

        requires("fabric-api")
//        optional("crafttweaker")
        optional("jei")
//        optional("rei")
//        optional("emi")
        optional("rrv")
    }
}

processResources {
    var replaceProperties = [
            minecraft_version    : minecraft_version,
            minecraft_required   : minecraft_required,

            mod_id               : mod_id,
            mod_name             : mod_name,
            mod_version          : version,
            mod_license          : mod_license,
            mod_authors          : mod_authors,
            mod_description      : mod_description,
            mod_credits          : mod_credits,
            mod_homepage         : mod_homepage,
            mod_github           : mod_github,
            fabric_loader_version: fabric_loader_version,
            fabric_api_version   : fabric_api_version
    ]
    // setting them as input
    inputs.properties replaceProperties

    filesMatching("fabric.mod.json") {
        expand replaceProperties + [project: project]
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    // Loom will automatically attach sourcesJar to a SourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}

// configure the maven publication
publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId project.group
            artifactId project.base.archivesName.get()
            version project.version
            from components.java
        }
    }

    repositories {
        maven {
            name "greenhouse"
            url "https://maven.greenhouse.lgbt/releases"
            credentials {
                username System.getenv('MAVEN_USERNAME')
                password System.getenv('MAVEN_PASSWORD')
            }
            authentication {
                create("basic", BasicAuthentication)
            }
        }
    }
}